73991: Package explorer does not recognise settings of newly installed filters [filters]